[project]
name = "asmr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "google-generativeai>=0.8.6",
    "numpy>=2.4.6",
    "omnivoice>=0.1.5",
    "python-dotenv>=1.2.2",
    "soundfile>=0.14.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "uvicorn>=0.49.0",
]
